# spatialdrought

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
spatialdrought/: __init__.py
spatialdrought/indices/: __init__.py  cdi.py  spei.py  spi.py  tci.py  vci.py  vhi.py
spatialdrought/io/: __init__.py  raster_io.py  xarray_io.py
spatialdrought/utils/: __init__.py  distributions.py  pet.py  temporal.py
tests/: test_cdi.py  test_io.py  test_spei.py  test_spi.py  test_vci_tci_vhi.py
